src/snapshots/miniml__parse__tests__parse_let.snap
---
source: src/parse.rs
expression: root
---
Root {
    decls: [
        Decl {
            kind: Let {
                name: Ident {
                    name: InternedString(x),
                    span: 4..5,
                },
                expr: Expr {
                    kind: Lit(
                        Num(
                            Ratio {
                                numer: 1,
                                denom: 1,
                            },
                        ),
                    ),
                    span: 8..9,
                },
            },
            span: 0..9,
        },
    ],
    span: 0..9,
}
