src/snapshots/miniml__parse__tests__parse_let_fn.snap
---
source: src/parse.rs
expression: root
---
Root {
    decls: [
        Decl {
            kind: Let {
                name: Ident {
                    name: InternedString(add),
                    span: 4..7,
                },
                expr: Expr {
                    kind: Lambda {
                        param: Ident {
                            name: InternedString(x),
                            span: 8..9,
                        },
                        expr: Expr {
                            kind: Lambda {
                                param: Ident {
                                    name: InternedString(y),
                                    span: 10..11,
                                },
                                expr: Expr {
                                    kind: Binary {
                                        op: BinaryOp {
                                            kind: Add,
                                            span: 16..17,
                                        },
                                        lhs: Expr {
                                            kind: Ident(
                                                Ident {
                                                    name: InternedString(x),
                                                    span: 14..15,
                                                },
                                            ),
                                            span: 14..15,
                                        },
                                        rhs: Expr {
                                            kind: Ident(
                                                Ident {
                                                    name: InternedString(y),
                                                    span: 18..19,
                                                },
                                            ),
                                            span: 18..19,
                                        },
                                    },
                                    span: 14..19,
                                },
                            },
                            span: 10..19,
                        },
                    },
                    span: 8..19,
                },
            },
            span: 0..19,
        },
    ],
    span: 0..19,
}
