src/snapshots/miniml__parse__tests__parse_let_fn_apply.snap
---
source: src/parse.rs
expression: root
---
Root {
    decls: [
        Decl {
            kind: Let {
                name: Ident {
                    name: InternedString(f),
                    span: 4..5,
                },
                expr: Expr {
                    kind: Lambda {
                        param: Ident {
                            name: InternedString(g),
                            span: 6..7,
                        },
                        expr: Expr {
                            kind: Lambda {
                                param: Ident {
                                    name: InternedString(x),
                                    span: 8..9,
                                },
                                expr: Expr {
                                    kind: Apply {
                                        fun: Expr {
                                            kind: Ident(
                                                Ident {
                                                    name: InternedString(f),
                                                    span: 12..13,
                                                },
                                            ),
                                            span: 12..13,
                                        },
                                        arg: Expr {
                                            kind: Apply {
                                                fun: Expr {
                                                    kind: Ident(
                                                        Ident {
                                                            name: InternedString(g),
                                                            span: 15..16,
                                                        },
                                                    ),
                                                    span: 15..16,
                                                },
                                                arg: Expr {
                                                    kind: Ident(
                                                        Ident {
                                                            name: InternedString(x),
                                                            span: 17..18,
                                                        },
                                                    ),
                                                    span: 17..18,
                                                },
                                            },
                                            span: 15..18,
                                        },
                                    },
                                    span: 12..18,
                                },
                            },
                            span: 8..18,
                        },
                    },
                    span: 6..18,
                },
            },
            span: 0..19,
        },
    ],
    span: 0..19,
}
